--- a/dreal/test/dr/BUILD
+++ b/dreal/test/dr/BUILD
@@ -110,6 +110,10 @@ dr_test(
 dr_test(
     name = "constrained_opt_townsend",
     size = "small",
+    args = [
+        "--precision 0.001",
+        "--local-optimization",
+    ],
 )
 
 dr_test(
