--- a/dreal/solver/BUILD.bazel
+++ b/dreal/solver/BUILD.bazel
@@ -62,6 +62,7 @@ dreal_cc_library(
         "//dreal/util:assert",
         "//dreal/util:box",
         "//dreal/util:exception",
+        "//dreal/util:expression_decomposer",
         "//dreal/util:ibex_converter",
         "//dreal/util:if_then_else_eliminator",
         "//dreal/util:logging",
