feat(symbolic): Make symbolic classes compatible with Eigen3

--- a/dreal/symbolic/BUILD.bazel
+++ b/dreal/symbolic/BUILD.bazel
@@ -74,6 +74,16 @@ dreal_cc_googletest(
     deps = [
         ":symbolic",
         ":symbolic_test_util",
+        "//dreal/util:eigen",
+    ],
+)
+
+dreal_cc_googletest(
+    name = "symbolic_expression_matrix_test",
+    tags = ["unit"],
+    deps = [
+        ":symbolic",
+        ":symbolic_test_util",
     ],
 )
 
