--- a/dreal/solver/BUILD.bazel
+++ b/dreal/solver/BUILD.bazel
@@ -44,6 +44,10 @@ dreal_cc_library(
         "relational_formula_evaluator.cc",
         "relational_formula_evaluator.h",
         "theory_solver.cc",
+        "branch_max_diam.h",
+        "branch_max_diam.cc",
+        "branch_gradient_descent.cc",
+        "branch_gradient_descent.h",
     ],
     hdrs = [
         "context.h",
@@ -70,6 +74,8 @@ dreal_cc_library(
         "//dreal/symbolic",
         "//dreal/util:assert",
         "//dreal/util:box",
+        "//dreal/util:eigen",
+        "//dreal/util:evaluation_visitor",
         "//dreal/util:exception",
         "//dreal/util:ibex_converter",
         "//dreal/util:if_then_else_eliminator",
