feat(util): Add cache and stat to Taylor1Eval

--- a/dreal/util/BUILD.bazel
+++ b/dreal/util/BUILD.bazel
@@ -42,6 +42,8 @@ dreal_cc_library(
     visibility = ["//dreal:__subpackages__"],
     deps = [
         ":box",
+        ":stat",
+        ":timer",
         "//dreal/symbolic",
         "@ibex",
     ],
