bazel: Add eigen3 dependency

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -54,6 +54,7 @@ cc_library(
         "@fmt",
         "@ibex",
         "@spdlog",
+        "@eigen3",
     ],
 )
 
@@ -116,6 +117,7 @@ pkg_deb(
     depends = [
         "coinor-libclp-dev",
         "libbz2-dev",
+        "libeigen3-dev",
         "libibex-dev",
         "libnlopt-dev",
         # The followings are Build-Depends:
