bazel(cds): Add "-mcx16" compiler flag
To support DCAS (double word compare and swap) in CDS library.

--- a/tools/cds.BUILD.bazel
+++ b/tools/cds.BUILD.bazel
@@ -10,7 +10,8 @@ cc_library(
     srcs = glob([
         "src/*.cpp",
     ]),
-    includes=["."],
+    includes = ["."],
+    copts = ["-mcx16"],
     linkopts = select({
         "@dreal//tools:linux": ["-pthread"],
         "@//conditions:default": [],
