--- a/tools/cds.BUILD.bazel
+++ b/tools/cds.BUILD.bazel
@@ -11,6 +11,7 @@ cc_library(
         "src/*.cpp",
     ]),
     includes=["."],
+    copts=["-mcx16"],
     linkopts = select({
         "@dreal//tools:linux": ["-pthread"],
         "@//conditions:default": [],
