refactor(util/string_to_interval.cc): Use RoundingModeGuard

--- a/dreal/util/BUILD.bazel
+++ b/dreal/util/BUILD.bazel
@@ -351,6 +351,7 @@ dreal_cc_library(
     ],
     visibility = ["//dreal:__subpackages__"],
     deps = [
+        ":rounding_mode_guard",
         "//dreal/util:box",
     ],
 )
