feat(util/cds.h): Add CDS-related utilities

--- a/dreal/util/BUILD.bazel
+++ b/dreal/util/BUILD.bazel
@@ -43,6 +43,17 @@ dreal_cc_library(
 )
 
 dreal_cc_library(
+    name = "cds",
+    hdrs = [
+        "cds.h",
+    ],
+    visibility = ["//dreal:__subpackages__"],
+    deps = [
+        "@cds",
+    ],
+)
+
+dreal_cc_library(
     name = "interval",
     srcs = [
         "interval.cc",
