--- a/dreal/contractor/BUILD.bazel
+++ b/dreal/contractor/BUILD.bazel
@@ -56,6 +56,7 @@ dreal_cc_library(
         "//dreal/util:optional",
         "//dreal/util:stat",
         "@ibex",
+        "@libcuckoo",
     ],
 )
 
