--- a/.bazelrc
+++ b/.bazelrc
@@ -27,43 +27,59 @@ test:cpplint --build_tests_only
 test:cpplint --test_tag_filters=cpplint
 
 ### ASan build. ###
-build:asan --action_env=ASAN_OPTIONS
-build:asan --copt -fsanitize=address
-build:asan --copt -O1
-build:asan --copt -fno-omit-frame-pointer
-build:asan --linkopt -fsanitize=address
-test:asan --test_tag_filters=-no_asan,-no_lsan
-test:asan --test_timeout=120,600,1800,7200
+build:asan --copt=-g
+build:asan --copt=-fno-common
+build:asan --copt=-fsanitize=address
+build:asan --copt=-O0
+build:asan --copt=-fno-omit-frame-pointer
+build:asan --linkopt=-fsanitize=address
+build:asan --test_env=ASAN_OPTIONS
+build:asan --test_env=LSAN_OPTIONS
+build:asan --test_tag_filters=-no_asan,-no_lsan
+build:asan --test_timeout=120,600,1800,7200
 
 ### LSan build. ###
-build:lsan --action_env=LSAN_OPTIONS
-build:lsan --copt -fsanitize=leak
-build:lsan --copt -O1
-build:lsan --copt -fno-omit-frame-pointer
-build:lsan --linkopt -fsanitize=leak
-test:lsan --test_tag_filters=-no_asan,-no_lsan
-test:lsan --test_timeout=120,600,1800,7200
+build:lsan --copt=-g
+build:lsan --copt=-fno-common
+build:lsan --copt=-fsanitize=leak
+build:lsan --copt=-O0
+build:lsan --copt=-fno-omit-frame-pointer
+build:lsan --linkopt=-fsanitize=leak
+build:lsan --test_env=LSAN_OPTIONS
+build:lsan --test_env=LSAN_SYMBOLIZER_PATH
+build:lsan --test_tag_filters=-no_asan,-no_lsan
+build:lsan --test_timeout=120,600,1800,7200
 
 ### TSan build. ###
-build:tsan --action_env=TSAN_OPTIONS
+build:tsan --build_tests_only
+build:tsan --copt -g
 build:tsan --copt -fsanitize=thread
 build:tsan --copt -O1
 build:tsan --copt -fno-omit-frame-pointer
+# From Tsan documentation for Clang-3.9:
+# fsanitize=thread flag will cause Clang to act as though the -fPIE flag
+# had been supplied if compiling without -fPIC, and as though the
+# -pie flag had been supplied if linking an executable
+# Bug in GCC: https://gcc.gnu.org/bugzilla/show_bug.cgi?id=67308
+build:tsan --noforce_pic
 build:tsan --linkopt -fsanitize=thread
-test:tsan --test_tag_filters=-no_tsan
-test:tsan --test_timeout=180,900,2700,10800
+build:tsan --test_env=TSAN_OPTIONS
+build:tsan --test_tag_filters=-no_tsan
+build:tsan --test_timeout=180,900,2700,10800
 
 ### UBSan build. ###
+build:ubsan --build_tests_only
 build:ubsan --copt -g
 build:ubsan --copt -fsanitize=undefined
-build:ubsan --copt -fno-sanitize=float-divide-by-zero
+# Since Bazel uses clang instead of clang++, enabling -fsanitize=vptr would
+# require extra linkopts that cause segmentation faults on pure C code.
+build:ubsan --copt -fno-sanitize=float-divide-by-zero,vptr
 build:ubsan --copt -O1
 build:ubsan --copt -fno-omit-frame-pointer
 build:ubsan --linkopt -fsanitize=undefined
-# https://groups.google.com/forum/#!topic/bazel-discuss/15h4GPixeGI
-build:ubsan --linkopt -lubsan
-test:ubsan --test_tag_filters=-no_ubsan
-test:ubsan --test_timeout=120,600,1800,7200
+build:ubsan --test_env=UBSAN_OPTIONS
+build:ubsan --test_tag_filters=-no_ubsan
+build:ubsan --test_timeout=120,600,1800,7200
 
 ### Kcov coverage build. ###
 build:kcov --copt -g
