--- a/dreal/contractor/BUILD.bazel
+++ b/dreal/contractor/BUILD.bazel
@@ -24,6 +24,8 @@ dreal_cc_library(
         "contractor_ibex_fwdbwd.h",
         "contractor_ibex_polytope.cc",
         "contractor_ibex_polytope.h",
+        "contractor_ibex_polytope_mt.cc",
+        "contractor_ibex_polytope_mt.h",
         "contractor_id.cc",
         "contractor_id.h",
         "contractor_integer.cc",
@@ -56,6 +58,7 @@ dreal_cc_library(
         "//dreal/util:optional",
         "//dreal/util:stat",
         "@ibex",
+        "@libcuckoo",
     ],
 )
 
