--- a/dreal/contractor/BUILD.bazel
+++ b/dreal/contractor/BUILD.bazel
@@ -22,6 +22,8 @@ dreal_cc_library(
         "contractor_forall.h",
         "contractor_ibex_fwdbwd.cc",
         "contractor_ibex_fwdbwd.h",
+        "contractor_ibex_fwdbwd_mt.cc",
+        "contractor_ibex_fwdbwd_mt.h",
         "contractor_ibex_polytope.cc",
         "contractor_ibex_polytope.h",
         "contractor_id.cc",
@@ -55,6 +57,7 @@ dreal_cc_library(
         "//dreal/util:nnfizer",
         "//dreal/util:optional",
         "//dreal/util:stat",
+        "//third_party/com_github_progschj_threadpool:thread_pool",
         "@ibex",
     ],
 )
